Sprite Estractor improvement